Mlog Documentation/ProcessorUI/styles.css
@font-face {
    font-family: 'Audiowide';
    src: url('../font/Audiowide-Regular.ttf') format('truetype'); 
    /* font-weight: 400; */
    /* font-style: normal; */
}

* {
    font-family: "Audiowide", sans-serif;

    /* -webkit-text-stroke: 1px;
    -webkit-text-stroke-color: black; */
    /* -webkit-text-fill-color: white; */
}

html {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    height: auto;
}

body {
    background-color: #000;
    display:flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    /* min-height: 90vh; */
    height: fit-content;
    width: calc(100% - 5vh * 2);
    margin: 5vh;
    overflow-y: auto;
    overflow-x: hidden;
}

body::-webkit-scrollbar{
    width: 18px; /* Set the width of the scrollbar */
    height: 12px;
    display: block;
}
body::-webkit-scrollbar-track{
    background-color: transparent;
}
body::-webkit-scrollbar-thumb{
    background-color:#2b2b2b; /* Make the thumb background transparent */
}

.loading {
    position: fixed; 
    color: rgb(255, 255, 255); 
    background-color: #0d0d0d;
    border-radius: 20px;
    border: #3c2f2f solid 10px;
    width: 50vw;
    height: 30vh;
    font-size: calc(20px + 1vw); 
    text-align: center; 
    justify-content: center ;
    user-select: none; 
    overflow-wrap: break-word; 
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    display: flex;
    flex-direction: column;
}

.loadingSub {
    position: absolute;
    width: 100%;
    color: rgb(255, 255, 255); 
    font-size: clamp(12px, 1.5vw, 20px); 
    text-align: center; 
    bottom: 1.5vh;
    user-select: none; 
    overflow-wrap: break-word; 
}

.helpContent {
    position: fixed; 
    color: rgb(255, 255, 255); 
    background-color: #000000;
    border-radius: 20px;
    font-size: calc(1px + 1vw); 
    justify-content: center ;
    user-select: none; 
    overflow-wrap: break-word; 
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    overflow-y: auto;
    padding: 0.5vw;
    outline-style: solid;
    outline-width: 5px;
    outline-color: rgb(80, 80, 80);
    border-radius: 10px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    user-select: none;
    width: clamp(50vw, calc(2000px - 80vw), 80vw);
    height: 80vh;
    font-size: large;
}

.helpContent::-webkit-scrollbar {
    width: 12px;
    height: 12px;
}

.helpContent::-webkit-scrollbar-track {
    background-color: transparent;
}

.helpContent::-webkit-scrollbar-thumb {
    background-color: #3c2f2f;
}

.saveMenu, .pasteMenu {
    background-color: rgb(0, 0, 0);
    color: rgb(248, 248, 248);
    padding: 0.5vw;
    outline-style: solid;
    outline-width: 5px;
    outline-color: rgb(80, 80, 80);
    border-radius: 10px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    user-select: none;
    width: fit-content;
    max-height: 80vh;
    font-size: clamp(14px, 10vw, 18px);
}

.pasteBox {
    width: clamp(40vw, calc(1000px - 110vw / 3), 80vw);
    height: 50vh; 
    text-align: left; 
    border: 3px white solid;
    border-radius: 10px;
    padding: 10px;
    background-color: transparent;
    color: white;
    font-size: clamp(14px, 10vw, 18px);
    margin: 20px;
}

.nameBox {
    width: 300px;
    min-width: 20vw;
    max-width: 90vw;
    text-align: left; 
    border: 3px white solid;
    border-radius: 10px;
    padding: 10px;
    background-color: transparent;
    color: white;
    font-size: clamp(14px, 10vw, 18px);
}

.saveList {
    display: flex;
    flex-direction: column;
    max-height: 60vh;
    overflow-y: auto;
    padding: 10px;
    border: #1a1a1a 4px solid;
    border-radius: 10px;
    margin: 10px;
}

.timelineList {
    background-color: black;
}

.Icon{
    position: fixed;
    user-select: none;
}

.Icon img {
    width: 50px;
    image-rendering: pixelated;
}

.autosaveIcon {
    right: 20px;
    bottom: 20px;
    opacity: 0;
}

.settingIcon {
    right: 20px;
    top: 20px;
}

.sliderContainer {
    position: relative;
    /* margin-right: 10px; */
}

.sliderContainer .name {
    position: absolute;
    top: 0;
    left: 15px;
    /* transform: translateX(-50%); */
    width: 40px;
    height: 40px;
    display: flex;
    align-items: center;
    font-size: 14px;
    pointer-events: none; /* Prevent interaction */
}

.sliderContainer .value {
    position: absolute;
    top: 0;
    right: 15px;
    /* transform: translateX(-50%); */
    width: 40px;
    height: 40px;
    display: flex;
    align-items: center;
    direction: rtl;
    font-size: 14px;
    pointer-events: none;
}

input[type="range"] {
    -webkit-appearance: none;
    appearance: none;
    width: 97%;
    height: 30px;
    background: transparent;
    outline: none;
    border: #2b2b2b 3px solid;
}

input[type="range"]::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    appearance: none; 
    width: 20px;
    height: 30px;
    background: #2b2b2b;

}

input[type="checkbox"] {
    -webkit-appearance: none;
    appearance: none;
    width: 30px;
    height: 30px;
    background: transparent;
    border: #2b2b2b 3px solid;
    /* clip-path: polygon(10% 0%, 90% 0%, 100% 10%, 100% 90%, 90% 100%, 10% 100%, 0% 90%, 0% 10%);
    box-shadow: 0 0 0 10px blue; */
}

input[type="checkbox"]:checked {
    -webkit-appearance: none;
    appearance: none;
    width: 30px;
    height: 30px;
    padding: 5px;
    background: #2b2b2b;
    background-clip: content-box;
    border: #2b2b2b 3px solid;
}

.checkBoxContainer{
    display: flex;

    align-items: center;
}

.saveList .saveSelected {
    background-color: gray;
    border-radius: 4px;
}

.saveList::-webkit-scrollbar{
    width: 12px;
    height: 12px;
}

.saveList::-webkit-scrollbar-track{
    background-color: transparent;
}

.saveList::-webkit-scrollbar-thumb{
    background-color: #3c2f2f;
}

.saveList div {
    cursor: pointer;
    user-select: none;
    font-size: 1.2em;
    padding: 3px;
}
/* ... */

